// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Vue Renderer | Textarea Layout Tests Basic Textarea Rendering should render simple textarea correctly 1`] = `
"Hello World                   
                              
                              
                              
                              
                              
                              
                              
                              
                              
"
`;

exports[`Vue Renderer | Textarea Layout Tests Basic Textarea Rendering should render multiline textarea content 1`] = `
"Line 1                        
Line 2                        
Line 3                        
                              
                              
                              
                              
                              
                              
                              
                              
                              
                              
                              
                              
"
`;

exports[`Vue Renderer | Textarea Layout Tests Basic Textarea Rendering should render textarea with word wrapping 1`] = `
"This is a very long           
line that should              
wrap to multiple              
lines when word               
wrapping is enabled           
                              
                              
                              
                              
                              
                              
                              
                              
                              
                              
"
`;

exports[`Vue Renderer | Textarea Layout Tests Basic Textarea Rendering should render textarea with placeholder 1`] = `
"Type something here...                  
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`Vue Renderer | Textarea Layout Tests Prompt-like Layout should render textarea in prompt-style layout with indicator 1`] = `
"┌──────────────────────────────────────────────────────────┐
│                                                          │
│ > Hello from the prompt                                  │
│                                                          │
│                                           ctrl+p commands│
└──────────────────────────────────────────────────────────┘
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`Vue Renderer | Textarea Layout Tests Prompt-like Layout should render textarea with long wrapping text in prompt layout 1`] = `
"┌────────────────────────────────────────────────┐
│                                                │
│   This is a very long prompt that will wrap    │
│ > across multiple lines in the textarea. It    │
│   should maintain proper layout with the       │
│   indicator on the left.                       │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
"
`;

exports[`Vue Renderer | Textarea Layout Tests Prompt-like Layout should render textarea in shell mode with different indicator 1`] = `
"┌────────────────────────────────────────────────┐
│                                                │
│ ! ls -la                                       │
│                                                │
│shell mode                                      │
└────────────────────────────────────────────────┘
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
"
`;

exports[`Vue Renderer | Textarea Layout Tests Complex Layouts with Multiple Textareas should render multiple textareas in a column layout 1`] = `
"┌─Chat─────────────────────────────────────────────────────┐
│┌────────────────────────────────────────────────────────┐│
││User  What is the weather like today?                   ││
│└────────────────────────────────────────────────────────┘│
│                                                          │
│┌────────────────────────────────────────────────────────┐│
││AI    I don't have access to real-time weather data,    ││
││      but I can help you find that information through  ││
││      various weather services.                         ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
"
`;

exports[`Vue Renderer | Textarea Layout Tests Complex Layouts with Multiple Textareas should handle nested boxes with textareas at different positions 1`] = `
"┌─Layout Test────────────────────────────────────┐     
│┌──────────────────┐ ┌─────────────────────────┐│     
││Input 1:          │ │Input 2:                 ││     
││Left panel content│ │Right panel with longer  ││     
││                  │ │content that may wrap    ││     
│└──────────────────┘ └─────────────────────────┘│     
│                                                │     
│┌──────────────────────────────────────────────┐│     
││Bottom input:                                 ││     
││Bottom panel spanning full width              ││     
│└──────────────────────────────────────────────┘│     
└────────────────────────────────────────────────┘     
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
                                                       
"
`;

exports[`Vue Renderer | Textarea Layout Tests FlexShrink Regression Tests should not shrink box when width is set via setter 1`] = `
"┌────────────────────────────┐
│>    Content that takes up  │
│     space                  │
└────────────────────────────┘
                              
"
`;

exports[`Vue Renderer | Textarea Layout Tests FlexShrink Regression Tests should not shrink box when height is set via setter in column layout 1`] = `
"┌───────────────────────┐     
│Header                 │     
│                       │     
│                       │     
│Line1                  │     
│Line2                  │     
│Line3                  │     
│Footer                 │     
│                       │     
└───────────────────────┘     
                              
                              
                              
                              
                              
"
`;

exports[`Vue Renderer | Textarea Layout Tests Edge Cases and Styling should render textarea with focused colors 1`] = `
"┌──────────────────────────────────────┐
│>                                     │
│   Focused textarea                   │
│                                      │
└──────────────────────────────────────┘
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`Vue Renderer | Textarea Layout Tests Edge Cases and Styling should render empty textarea with placeholder in prompt layout 1`] = `
"┌────────────────────────────────────────────────┐
│                                                │
│ > Enter your prompt here...                    │
│                                                │
│Ready to chat                                   │
└────────────────────────────────────────────────┘
                                                  
                                                  
                                                  
                                                  
                                                  
                                                  
"
`;

exports[`Vue Renderer | Textarea Layout Tests Edge Cases and Styling should render textarea with very long single line 1`] = `
"┌──────────────────────────────────────┐
│>                                     │
│   ThisIsAVeryLongLineWithNoSpacesThat│
│   WillWrapByCharacterWhenCharWrapping│
│   IsEnabled                          │
│                                      │
└──────────────────────────────────────┘
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
"
`;

exports[`Vue Renderer | Textarea Layout Tests Edge Cases and Styling should render full prompt-like layout with all components 1`] = `
"┌────────────────────────────────────────────────────────────────────┐
│                                                                    │
│ > Explain how async/await works in JavaScript and provide some     │
│   examples                                                         │
│                                                                    │
│                                                             ctrl+p │
└────────────────────────────────────────────────────────────────────┘
                                                                      
Tip: Use arrow keys to navigate through history when cursor is at the 
start                                                                 
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
                                                                      
"
`;
